Fixing font size in production being too big

--- a/secret/secret.css
+++ b/secret/secret.css
@@ -44,7 +44,7 @@ p{
     pointer-events: none;
 }
 text{
-    font-size: 2em;
+    font-size: 1.5em;
     display: block;
     white-space: nowrap;
     overflow: hidden;
